--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </section>
 
   <footer id="footer">
-    <p>© Aharon Kkazokin 2025 </p>
+    <p>© Aharon Kazokin 2025 </p>
   </footer>
 </body>
 </html>
